[package]
name = "tuxb0xx"
version = "0.1.0"
authors = ["tone <tony.y.gong@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"anyhow" = "1.0"
"bitflags" = "1.3"
"bounded-integer" = { version = "0.5", features = ["macro"] }
"evdev-rs" = "0.5"
"argh" = "0.1"
"log" = "0.4"
"simple_logger" = "1.11"
"futures" = "0.3"
"glob" = "0.3"
"evdev-utils" = { git = "https://github.com/ttttcrngyblflpp/evdev-utils", branch = "main" }
"libc" = "0.2"
"async-io" = "1.4"

[dev-dependencies]
"test-case" = "2.0"
"permutohedron" = "0.2"
